@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-28T08:24:17Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 4 ],
-  "count_decinc" : [ -2, +0 ],
+  "timestamp" : "2022-05-28T16:27:20Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 4 ],
+  "count_decinc" : [ -3, +0 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -1, +0 ]
