@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-28T08:24:17Z",
+  "timestamp" : "2022-05-28T16:27:20Z",
   "count_outdated" : 2106,
   "uniques_outdated" : 400,
-  "count" : 2141,
+  "count" : 2140,
   "uniques" : 422,
   "clones" : [
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 4 ],
+      "count": 1,
+      "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
